--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
 <body>
   <!-- LOADER -->
-  <!-- <div class="loader_bg">
+  <div class="loader_bg">
     <div class="loader">
-      <p>Welcome!</p>
+      <!-- <p>Welcome!</p> -->
     </div>
-  </div> -->
+  </div>
   <!--Header-->
   <header id="header">
     <div class="header">
@@ -840,13 +840,13 @@
   <script src="js/app.js"></script>
   <script src="js/projects.js"></script>
   <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"></script>
-  <!-- <script>
+  <script>
     ScrollOut({
       onShown(el) {
         el.classList.add("animated");
       }
     });
-  </script> -->
+  </script>
 </body>
 
 </html>
