--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@
 <body>
   <!-- LOADER -->
   <div class="loader_bg">
-    <div class="loader">
-      <!-- <p>Welcome!</p> -->
+    <div class="spinner">
+      loading
+      <div class="sector sector-1"></div>
+      <div class="sector sector-2"></div>
+      <div class="sector sector-3"></div>
     </div>
   </div>
   <!--Header-->
