--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
   <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- JAVASCRIPT -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" defer referrerpolicy="no-referrer"></script>
+  <script src="js/app.js" defer></script>
+  <script src="js/projects.js" defer></script>
+  <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js" defer></script>
+
 </head>
 
 <body>
@@ -831,25 +837,20 @@
   </section>
   <!-- END OF FOOTER-->
 </main>
-  
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <!-- PRELOADER SCRIPT -->
-  <script>
-    setTimeout(function(){
-      $('.loader_bg').fadeToggle();
-    }, 6000);
-  </script>
-  <script src="js/app.js"></script>
-  <script src="js/projects.js"></script>
-  <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"></script>
-  <script>
-    ScrollOut({
-      onShown(el) {
-        el.classList.add("animated");
-      }
-    });
-  </script>
+<script>
+  setTimeout(function () {
+    $('.loader_bg').fadeToggle();
+  }, 8000);
+</script>
+<!-- SCROLL SCRIPT -->
+<script>
+  ScrollOut({
+    onShown(el) {
+      el.classList.add("animated");
+    }
+  });
+</script>
 </body>
 
 </html>
