--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
   <section id="home" class="section welcome-section">
     <div class="hero container">
       <div class="hero-bg">
-        <img src="img/massimiliano-morosinotto-STKcS9ojYHU-unsplash-min.jpg" loading="lazy" alt="">
-        <!-- <img src="hero/ales-nesetril-Im7lZjxeLhg-unsplash.jpg" loading="lazy" alt=""> -->
+        <!-- <img src="img/massimiliano-morosinotto-STKcS9ojYHU-unsplash-min.jpg" loading="lazy" alt=""> -->
+        <img src="hero/ales-nesetril-Im7lZjxeLhg-unsplash.jpg" loading="lazy" alt="laptop">
       </div>
       <div id="hero-h1">
         <!-- <h1>my name is boitumelo sempe <span>aka</span></h1> -->
