--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" defer referrerpolicy="no-referrer"></script>
   <script src="js/app.js" defer></script>
   <script src="js/projects.js" defer></script>
-  <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js" defer></script>
 
 </head>
 
@@ -844,6 +843,8 @@
   }, 8000);
 </script>
 <!-- SCROLL SCRIPT -->
+<script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"></script>
+
 <script>
   ScrollOut({
     onShown(el) {
