--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       loading
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!--Header-->
   <header id="header">
     <div class="header">
@@ -166,9 +166,6 @@
         <p><a href="#menu">websites & Landing pages</a></p>
       </div>
     </div>
-    <!-- <div id="cta">
-      <a class="cta" title="View my projects" href="#work">view my work</a>
-    </div> -->
   </section>
   <!-- END OF HERO-->
   <!--  MENU -->
@@ -609,7 +606,6 @@
     </div>
   </section>
   <!-- END OF PROJECTS-->
-
   <!-- ABOUT SECTION-->
   <section class="link-section" id="about">
     <div id="about-target" class="about container">
