--- a/index.html
+++ b/index.html
@@ -500,6 +500,20 @@
         <h1 data-text="projects" class="section-title">pro<span>j</span>ects</h1>
       </div>
       <div class="work-items">
+        <!-- ORICH -->
+        <div data-scroll class="work-item">
+          <div class="work-title">
+            <h2>Orich Trading & projects&trade;</h2>
+            <p><a href="https://orichtrading.co.za">www.orichtrading.co.za</a></p>
+          </div>
+          <figure>
+            <a href="https://shakexsempe.github.io/orich-trading/" target="_blank" title="Github Repository">
+            <img src="img/orich-min.jpg" alt="Orich Trading & Projects">
+          </a>
+          </figure>
+          <a class="view-site-btn" href="https://orich-trading-projects.netlify.app/" target="_blank">view website</a>
+          <a class="view-repo-btn" href="https://github.com/ShakexSempe/orich-trading" target="_blank">view repository</a>
+        </div>
         <!-- kSAUCE -->
         <div data-scroll class="work-item ksauce">
           <div class="work-title">
@@ -513,20 +527,6 @@
           </figure>
           <a class="view-site-btn" href="https://ksauce.netlify.app/" target="_blank">view website</a>
           <a class="view-repo-btn" href="https://github.com/ShakexSempe/kutlwano-hot-sauce" target="_blank">view repository</a>
-        </div>
-        <!-- ORICH -->
-        <div data-scroll class="work-item">
-          <div class="work-title">
-            <h2>Orich Trading & projects&trade;</h2>
-            <p>5 page Responsive Website</p>
-          </div>
-          <figure>
-            <a href="https://shakexsempe.github.io/orich-trading/" target="_blank" title="Github Repository">
-            <img src="img/orich-min.jpg" alt="Orich Trading & Projects">
-          </a>
-          </figure>
-          <a class="view-site-btn" href="https://orich-trading-projects.netlify.app/" target="_blank">view website</a>
-          <a class="view-repo-btn" href="https://github.com/ShakexSempe/orich-trading" target="_blank">view repository</a>
         </div>
         <!-- MUNCH UP -->
         <div data-scroll class="work-item">
