--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
                 <li>Applied Visual Design</li>
                 <li>Semantic Markup</li>
                 <li>Search engine optimization</li>
+                <li>Form Elements</li>
               </ul>
             </div>
 
@@ -283,9 +284,8 @@
               </div>
               <h2>CSS</h2>
               <ul>
-                <li>Animations</li>
-                <li>Flexbox</li>
-                <li>Grid Layout</li>
+                <li>Animations & Transitions</li>
+                <li>Flexbox & Grid Layout</li>
                 <li>Responsive Web Design</li>
               </ul>
             </div>
