--- a/index.html
+++ b/index.html
@@ -235,6 +235,31 @@
       </div>
     </div>
   </section>
+  <!-- CUBE -->
+  <div class="cube-container">
+    <div class="scene io-item">
+        <div class="floor"></div>
+        <div class="cube io-item">
+            <div class="front">
+              <a href="#skills">skills</a>
+            </div>
+            <div class="back">
+              <a href="#projects">projects</a>
+            </div>
+            <div class="left">
+              <a href="#work">work</a>
+            </div>
+            <div class="right">
+              <a href="#contact">contact</a>
+            </div>
+            <div class="top">
+                <div class="ballShadow"></div>
+            </div>
+            <div class="bottom"></div>
+        </div>
+        <div class="ball io-item"></div>
+    </div>
+</div>
   <!--  END OF MENU -->
   <main id="main">
   <!-- SKILLS SECTION-->
