--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
               <a href="#work">work</a>
             </div>
             <div class="right">
-              <a href="#contact">contact</a>
+              <a href="#about">about</a>
             </div>
             <div class="top">
                 <div class="ballShadow"></div>
@@ -665,9 +665,9 @@
             <p class="about-body">I am currently learning the MERN stack which I aim to build full stack web products.
             </p>
           </article>
-          <button id="readBtn" title="More About Boitumelo">read more</button>
+          <!-- <button id="readBtn" title="More About Boitumelo">read more</button> -->
 
-          <article id="cv">
+          <!-- <article id="cv">
             <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" target="_blank" title='Linkedin profile'
               class="fcc-link">
               <i class="fab fa-linkedin-in" aria-hidden="true"></i>Linkedin
@@ -678,18 +678,23 @@
             <a href="https://github.com/ShakexSempe" title="Github" target="_blank" id="profile-link">
               <i class="fab fa-github"></i>github
             </a>
-          </article>
+          </article> -->
         </div>
+      </div>
+      <div class="col-left">
+        <figure class="about-img">
+          <img src="img/me-min.jpg" loading="lazy" alt="Boitumelo Shakex Sempe">
+        </figure>
       </div>
     </div>
   </section>
   <!--END OF ABOUT SECTION-->
   <!-- PADDING SECTION -->
-  <div class="section-pad pad-me">
+  <!-- <div class="section-pad pad-me">
     <figure data-scroll>
       <img src="img/me-min.jpg" loading="lazy" alt="Boitumelo Sempe">
     </figure>
-  </div>
+  </div> -->
   <!-- CONTACT SECTION-->
   <section class="link-section" id="contact">
 
