--- a/index.html
+++ b/index.html
@@ -646,15 +646,20 @@
               suited for small businesses and individuals alike.
             </p>
             <p class="about-body">
+              <i class="fa-solid fa-user-graduate"></i>
               I obtained my Bachelors degree (Bpolsci) from the University of Pretoria having gained my A-levels at the
               International School of South Africa
             </p>
-            <p class="about-body">I worked as a Customer Care agent at the Compensation Fund (Department of Labour)
+            <p class="about-body">
+              <i class="fa-solid fa-headset"></i>
+              I worked as a Customer Care agent at the Compensation Fund (Department of Labour)
               and in 2019 enrolled in the online coding bootcamp freeCodeCamp
               where I completed a certificate in Responsive Web Design.
             </p>
 
-            <p class="about-body" id="about-body">I code responsive web pages suitable for devices ranging
+            <p class="about-body" id="about-body">
+              <i class="fa-solid fa-code"></i>
+              I code responsive web pages suitable for devices ranging
               from small mobile screens to large desktop screens. My preferred tool for building and maintaining
               stylesheets is Sass while
               I use HTML Semantic Markup and On-Page Search Engine Optimization techniques to grow website views,
@@ -662,7 +667,9 @@
             </p>
 
 
-            <p class="about-body">I am currently learning the MERN stack which I aim to build full stack web products.
+            <p class="about-body">
+              <i class="fa-solid fa-layer-group"></i>
+              I am currently learning the MERN stack which I aim to build full stack web products.
             </p>
           </article>
           <!-- <button id="readBtn" title="More About Boitumelo">read more</button> -->
