--- a/index.html
+++ b/index.html
@@ -638,26 +638,26 @@
         <div class="about-header">
           <h1 title="about me: boitumelo sempe" data-text="aboutme" class="section-title">About<span>me</span></h1>
         </div>
-        <div class="article-container" data-scroll>
+        <div class="article-container">
           <article class="about-article">
-            <p id="intro">Boitumelo 'Shakex' Sempe is an International Relations graduate and freelance Front-End Web
+            <p class="io-item" id="intro">Boitumelo 'Shakex' Sempe is an International Relations graduate and freelance Front-End Web
               Developer specializing in responsive
               landing and portfolio webpages
               suited for small businesses and individuals alike.
             </p>
-            <p class="about-body">
+            <p class="about-body io-item">
               <i class="fa-solid fa-user-graduate"></i>
-              I obtained my Bachelors degree (Bpolsci) from the University of Pretoria having gained my A-levels at the
-              International School of South Africa
+              I graduated with a Bachelors degree (Bpolsci) from the University of Pretoria having gained my A-levels at the
+              International School of South Africa.
             </p>
-            <p class="about-body">
+            <p class="about-body io-item">
               <i class="fa-solid fa-headset"></i>
-              I worked as a Customer Care agent at the Compensation Fund (Department of Labour)
-              and in 2019 enrolled in the online coding bootcamp freeCodeCamp
-              where I completed a certificate in Responsive Web Design.
+              I then worked as a Customer Care agent at the Compensation Fund (Department of Labour)
+              before enrolling in the online coding bootcamp freeCodeCamp
+              where I completed a <a title="Responsive Web Design certificate" href="https://www.freecodecamp.org/certification/boitumelo-sempe/responsive-web-design" target="_blank">Certificate in Responsive Web Design.</a>
             </p>
 
-            <p class="about-body" id="about-body">
+            <p class="about-body io-item" id="about-body">
               <i class="fa-solid fa-code"></i>
               I code responsive web pages suitable for devices ranging
               from small mobile screens to large desktop screens. My preferred tool for building and maintaining
@@ -667,7 +667,7 @@
             </p>
 
 
-            <p class="about-body">
+            <p class="about-body io-item">
               <i class="fa-solid fa-layer-group"></i>
               I am currently learning the MERN stack which I aim to build full stack web products.
             </p>
