--- a/index.html
+++ b/index.html
@@ -659,13 +659,14 @@
 
             <p class="about-body io-item" id="about-body">
               <i class="fa-solid fa-code"></i>
-              I code responsive web pages suitable for devices ranging
-              from small mobile screens to large desktop screens. My preferred tool for building and maintaining
-              stylesheets is Sass while
-              I use HTML Semantic Markup and On-Page Search Engine Optimization techniques to grow website views,
+              I use HTML-5 Semantic Markup to code accessible and responsive web pages. 
+              Additionally, I implement On-Page Search Engine Optimization techniques to grow website views,
               essential for online presence and web traffic to the site by potential customers and clients.
             </p>
-
+            <p class="about-body io-item" id="about-body">
+              <i class="fa-brands fa-sass"></i>
+              Syntactically Awesome Style Sheets (Sass) is my main weapon of choice in scripting eye catching User Interface responsive pages that look good on all devices.
+            </p>
 
             <p class="about-body io-item">
               <i class="fa-solid fa-layer-group"></i>
