--- a/index.html
+++ b/index.html
@@ -230,13 +230,13 @@
         <div class="menu-cta">
           <a href="#" class="btn">contact</a>
           <a href="#" class="btn">view</a>
-          <a href="#skills" class="page-btn">next</a>
+          <a href="#cube" class="page-btn">next</a>
         </div>
       </div>
     </div>
   </section>
   <!-- CUBE -->
-  <div class="cube-container">
+  <div id="cube" class="cube-container">
     <div class="scene io-item">
         <div class="floor"></div>
         <div class="cube io-item">
