section titles color

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       loading
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!--Header-->
   <header id="header">
     <div class="header">
@@ -241,17 +241,18 @@
         <div class="floor"></div>
         <div class="cube io-item">
             <div class="front">
-              <a href="#skills">skills</a>
-            </div>
-            <div class="back">
-              <a href="#projects">projects</a>
-            </div>
-            <div class="left">
-              <a href="#work">work</a>
+              <a href="#skills">1. skills</a>
             </div>
             <div class="right">
-              <a href="#about">about</a>
+              <a href="#work">2. work</a>
             </div>
+            <div class="back">
+              <a href="#projects">3. portfolio</a>
+            </div>
+            <div class="left">
+              <a href="#about">4. about</a>
+            </div>
+            
             <div class="top">
                 <div class="ballShadow"></div>
             </div>
