--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
 <body>
   <!-- LOADER -->
-  <!-- <div class="loader_bg">
+  <div class="loader_bg">
     <div class="spinner">
       loading
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div> -->
+  </div>
   <!--Header-->
   <header id="header">
     <div class="header">
@@ -766,27 +766,25 @@
   <section class="link-section" id="footer">
     <div class="footer container">
 
-      <!-- social media links -->
+      <!-- SOCIAL MEDIA LINKS -->
       <div class="socialMedia-links">
         <h1 data-scroll title="social media links" class="footer-section-title">my links</h1>
         <div class="links-grid">
-          <!-- social media link -->
+          <!-- CODE-PEN-->
           <div class="socialMedia-item codepen">
             <p class="link-icon">codePen</p>
             <a href="https://codepen.io/bSempe" title="freeCodecamp" data-icon="codepen" target="_blank">
               <i class="fab fa-codepen"></i>@bsempe
             </a>
           </div>
-          <!-- end of social media link -->
-          <!-- social media link -->
+          <!-- FREE CODE CAMP -->
           <div class="socialMedia-item fcc">
             <p class="link-icon">freeCodeCamp</p>
             <a href="https://www.freecodecamp.org/boitumelo-sempe" title="freeCodecamp" data-icon="FCC" target="_blank">
               <i class="fab fa-free-code-camp"></i>boitumelo sempe
             </a>
           </div>
-          <!-- end of social media link -->
-          <!-- social media link -->
+          <!-- FRONT-END-MENTOR -->
           <div class="socialMedia-item fem">
             <p class="link-icon">front-end-mentor</p>
             <a href="https://www.frontendmentor.io/profile/ShakexSempe" title="font-end-mentor" data-icon="FCC"
@@ -794,16 +792,14 @@
               <i class="fas fa-anchor"></i>@ShakexSempe
             </a>
           </div>
-          <!-- end of social media link -->
-          <!-- social media link -->
+          <!-- GIT-HUB -->
           <div class="socialMedia-item github">
             <p class="link-icon">github</p>
             <a href="https://github.com/ShakexSempe" title="github" data-icon="github" target="_blank">
               <i class="fab fa-github"></i>ShakexSempe
             </a>
           </div>
-          <!-- end of social media link -->
-          <!-- social media link -->
+          <!-- LINKEDIN -->
           <div class="socialMedia-item linkedin">
             <!-- <i class="fas fa-link link-icon"></i> -->
             <p class="link-icon">linkedin</p>
@@ -812,15 +808,13 @@
               <i class="fab fa-linkedin-in"></i>boitumelo Sempe
             </a>
           </div>
-          <!-- end of social media link -->
-          <!-- social media link -->
+          <!-- TWTTER -->
           <div class="socialMedia-item twitter">
             <p class="link-icon">twitter</p>
             <a href="https://twitter.com/Shake_x11" title="twitter" data-icon="twitter" target="_blank">
               <i class="fab fa-twitter"></i>@shake_x11
             </a>
           </div>
-          <!-- end of social media link -->
         </div>
 
       </div>
