--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </h2>
 
         <h2 id="aka"><span>a.k.a</span></h2>
-        <a href="#menu" type="button" title="Shakex Sempe: Web Developer" id="cta-header" class="scroll-link">
+        <a href="#cube" type="button" title="Shakex Sempe: Web Developer" id="cta-header" class="scroll-link">
           <span style="--i:1;">S</span>
           <span style="--i:2;">h</span>
           <span style="--i:3;">a</span>
@@ -163,78 +163,12 @@
       <div class="slogan">
         <p>web developer : </p>
         <p>responsive, Immersive & Engaging</p>
-        <p><a href="#menu">websites & Landing pages</a></p>
+        <p><a href="#cube">websites & Landing pages</a></p>
       </div>
     </div>
   </section>
   <!-- END OF HERO-->
-  <!--  MENU -->
-  <section id="menu">
-    <!-- RESPONSIVE -->
-    <div class="menu-section" id="menu-1">
-      <div class="menu-img io-item">
-        <figure class="fig fig-response">
-          <img src="hero/devices.png" alt="Devices">
-        </figure>
-      </div>
-      <div class="menu-content">
-        <div class="menu-title io-item">
-          <h2>
-            responsive web design
-          </h2>
-          <p>Webpages that look good on all devices.</p>
-        </div>
-        <div class="menu-cta">
-          <a href="#" class="btn">contact</a>
-          <a href="#" class="btn">view</a>
-          <a href="#menu-2" class="page-btn">next</a>
-        </div>
-      </div>
-    </div>
-    <!-- IMMERSIVE -->
-    <div class="menu-section" id="menu-2">
-      <div class="menu-img io-item">
-        <figure class="fig fig-css">
-          <img src="hero/arrow.png" alt="css3">
-        </figure>
-      </div>
-      <div class="menu-content">
-        <div class="menu-title io-item title-js">
-          <h2>
-            Immersive user Interface
-          </h2>
-          <p>Eye catching & satisfying user experience</p>
-        </div>
-        <div class="menu-cta">
-          <a href="#" class="btn">contact</a>
-          <a href="#" class="btn">view</a>
-          <a href="#menu-3" class="page-btn">next</a>
-        </div>
-      </div>
-    </div>
-    <!-- ENGAGE -->
-    <div class="menu-section" id="menu-3">
-      <div class="menu-img io-item">
-        <figure class="fig fig-js">
-          <img src="hero/access.png" alt="javascript logo">
-        </figure>
-        
-      </div>
-      <div class="menu-content">
-        <div class="menu-title io-item">
-          <h2>
-            engaging user experience
-          </h2>
-          <p>Dynamic & responisve interfaces</p>
-        </div>
-        <div class="menu-cta">
-          <a href="#" class="btn">contact</a>
-          <a href="#" class="btn">view</a>
-          <a href="#cube" class="page-btn">next</a>
-        </div>
-      </div>
-    </div>
-  </section>
+  
   <!-- CUBE -->
   <div id="cube" class="cube-container">
     <div class="scene io-item">
@@ -286,7 +220,7 @@
       </div>
       <!--Dropdown-->
       <div data-scroll class="dropdown">
-        <button onclick="dropdown()" title="full skillset" class="dropbtn">My Skills</button>
+        <button onclick="dropdown()" title="View Full Skill-set" class="dropbtn">My Skills</button>
         <div id="myDropdown" class="dropdown-content">
 
           <div class="skills-bottom">
@@ -704,6 +638,73 @@
       <img src="img/me-min.jpg" loading="lazy" alt="Boitumelo Sempe">
     </figure>
   </div> -->
+  <!--  MENU -->
+  <section id="menu">
+    <!-- RESPONSIVE -->
+    <div class="menu-section" id="menu-1">
+      <div class="menu-img io-item">
+        <figure class="fig fig-response">
+          <img src="hero/devices.png" alt="Devices">
+        </figure>
+      </div>
+      <div class="menu-content">
+        <div class="menu-title io-item">
+          <h2>
+            responsive web design
+          </h2>
+          <p>Webpages that look good on all devices.</p>
+        </div>
+        <div class="menu-cta">
+          <a href="#" class="btn">contact</a>
+          <a href="#" class="btn">view</a>
+          <a href="#menu-2" class="page-btn">next</a>
+        </div>
+      </div>
+    </div>
+    <!-- IMMERSIVE -->
+    <div class="menu-section" id="menu-2">
+      <div class="menu-img io-item">
+        <figure class="fig fig-css">
+          <img src="hero/arrow.png" alt="css3">
+        </figure>
+      </div>
+      <div class="menu-content">
+        <div class="menu-title io-item title-js">
+          <h2>
+            Immersive user Interface
+          </h2>
+          <p>Eye catching & satisfying user experience</p>
+        </div>
+        <div class="menu-cta">
+          <a href="#" class="btn">contact</a>
+          <a href="#" class="btn">view</a>
+          <a href="#menu-3" class="page-btn">next</a>
+        </div>
+      </div>
+    </div>
+    <!-- ENGAGE -->
+    <div class="menu-section" id="menu-3">
+      <div class="menu-img io-item">
+        <figure class="fig fig-js">
+          <img src="hero/access.png" alt="javascript logo">
+        </figure>
+        
+      </div>
+      <div class="menu-content">
+        <div class="menu-title io-item">
+          <h2>
+            engaging user experience
+          </h2>
+          <p>Dynamic & responsive interfaces</p>
+        </div>
+        <div class="menu-cta">
+          <a href="#" class="btn">contact</a>
+          <a href="#" class="btn">view</a>
+          <a href="#contact" class="page-btn">next</a>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- CONTACT SECTION-->
   <section class="link-section" id="contact">
 
