--- a/index.html
+++ b/index.html
@@ -581,15 +581,21 @@
               suited for small businesses and individuals alike.
             </p>
             <p class="about-body io-item">
+              <i class="fa-brands fa-free-code-camp"></i>
+              <a title="Responsive Web Design certificate" href="https://www.freecodecamp.org/certification/boitumelo-sempe/responsive-web-design" target="_blank">Responsive Web Design.</a>
+              <span class="institution">FreeCodeCamp</span>
+            </p>
+            <p class="about-body io-item">
               <i class="fa-solid fa-user-graduate"></i>
-              I graduated with a Bachelors degree (Bpolsci) from the University of Pretoria having gained my A-levels at the
-              International School of South Africa.
+              Bachelors degree (Bpolsci) <span class="institution">University of Pretoria</span>
+            </p>
+            <p class="about-body io-item">
+              <i class="fa-solid fa-graduation-cap"></i>
+              A-Levels  <span class="institution">International School of South Africa</span>
             </p>
             <p class="about-body io-item">
               <i class="fa-solid fa-headset"></i>
-              I then worked as a Customer Care agent at the Compensation Fund (Department of Labour)
-              before enrolling in the online coding bootcamp freeCodeCamp
-              where I completed a <a title="Responsive Web Design certificate" href="https://www.freecodecamp.org/certification/boitumelo-sempe/responsive-web-design" target="_blank">Certificate in Responsive Web Design.</a>
+              Customer Care agent <span class="institution">Compensation Fund [Dept of Labour]</span>
             </p>
 
             <p class="about-body io-item" id="about-body">
