about article .school

--- a/index.html
+++ b/index.html
@@ -583,19 +583,19 @@
             <p class="about-body io-item">
               <i class="fa-brands fa-free-code-camp"></i>
               <a title="Responsive Web Design certificate" href="https://www.freecodecamp.org/certification/boitumelo-sempe/responsive-web-design" target="_blank">Responsive Web Design.</a>
-              <span class="institution">FreeCodeCamp</span>
+              <span class="school">FreeCodeCamp</span>
             </p>
             <p class="about-body io-item">
               <i class="fa-solid fa-user-graduate"></i>
-              Bachelors degree (Bpolsci) <span class="institution">University of Pretoria</span>
+              Bachelors degree (Bpolsci) <span class="school">University of Pretoria</span>
             </p>
             <p class="about-body io-item">
               <i class="fa-solid fa-graduation-cap"></i>
-              A-Levels  <span class="institution">International School of South Africa</span>
+              A-Levels  <span class="school">International School of South Africa</span>
             </p>
             <p class="about-body io-item">
               <i class="fa-solid fa-headset"></i>
-              Customer Care agent <span class="institution">Compensation Fund [Dept of Labour]</span>
+              Customer Care agent <span class="school">Compensation Fund [Dept of Labour]</span>
             </p>
 
             <p class="about-body io-item" id="about-body">
