--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       loading
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!--Header-->
   <header id="header">
     <div class="header">
@@ -610,8 +610,8 @@
             </p>
 
             <p class="about-body io-item">
-              <i class="fa-solid fa-layer-group"></i>
-              I am currently learning the MERN stack which I aim to build full stack web products.
+              <i class="fa-brands fa-react"></i>
+              I am currently learning React javascript framework to create interactive User Interface.
             </p>
           </article>
           <!-- <button id="readBtn" title="More About Boitumelo">read more</button> -->
