--- a/index.html
+++ b/index.html
@@ -577,8 +577,7 @@
           <article class="about-article">
             <p class="io-item" id="intro">Boitumelo 'Shakex' Sempe is an International Relations graduate and freelance Front-End Web
               Developer specializing in responsive
-              landing and portfolio webpages
-              suited for small businesses and individuals alike.
+              landing and portfolio webpages.
             </p>
             <p class="about-body io-item">
               <i class="fa-brands fa-free-code-camp"></i>
@@ -599,19 +598,22 @@
             </p>
 
             <p class="about-body io-item" id="about-body">
-              <i class="fa-solid fa-code"></i>
-              I use HTML-5 Semantic Markup to code accessible and responsive web pages. 
-              Additionally, I implement On-Page Search Engine Optimization techniques to grow website views,
-              essential for online presence and web traffic to the site by potential customers and clients.
+              <!-- <i class="fa-solid fa-code"></i> -->
+              <i class="fab fa-html5"></i>
+              I use <a href="https://html.com/semantic-markup/" target="_blank">HTML-5 Semantic Markup</a> to code accessible and responsive web pages. 
+              Additionally, I implement On-Page Search Engine Optimization techniques.
             </p>
             <p class="about-body io-item" id="about-body">
               <i class="fa-brands fa-sass"></i>
-              Syntactically Awesome Style Sheets (Sass) is my main weapon of choice in scripting eye catching User Interface responsive pages that look good on all devices.
+              Syntactically Awesome Style Sheets (<a href="https://sass-lang.com/" target="_blank">Sass</a>) is my preferred CSS preprocessor in creating eye-catching& responsive User Interface.
             </p>
-
+            <p class="about-body io-item" id="about-body">
+              <i class="fa-brands fa-js"></i>
+              I use <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">Javascript</a> to script dynamic& interactive User Interface.  
+            </p>
             <p class="about-body io-item">
               <i class="fa-brands fa-react"></i>
-              I am currently learning React javascript framework to create interactive User Interface.
+              I am currently learning the javascript framework <a href="https://reactjs.org/" target="_blank">React</a> to create more complex interactive User Interface.
             </p>
           </article>
           <!-- <button id="readBtn" title="More About Boitumelo">read more</button> -->
