--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
         </div>
         <div class="article-container">
           <article class="about-article">
-            <p class="io-item" id="intro">Boitumelo 'Shakex' Sempe is an International Relations graduate and freelance Front-End Web
+            <p class="io-item" id="intro">Boitumelo 'Shakex' Sempe is a South Africa based International Relations graduate and freelance Front-End Web
               Developer specializing in responsive
               landing and portfolio webpages.
             </p>
