--- a/index.html
+++ b/index.html
@@ -721,8 +721,8 @@
         <h1 title="contact information" data-text="contactinfo" class="section-title">Contact<span>Info</span></h1>
       </div>
       <div class="contact-items">
-
-        <article title="email" data-scroll class="contact-item">
+        <!-- EMAIL ITEM -->
+        <article title="Email Info" data-scroll class="contact-item">
           <div class="icon">
             <i class="fas fa-envelope"></i>
           </div>
@@ -733,8 +733,8 @@
               ..email me</a>
           </div>
         </article>
-
-        <article title="phone details" data-scroll class="contact-item">
+        <!-- PHONE NUMBER -->
+        <article title="Phone Number" data-scroll class="contact-item">
           <div class="icon">
             <i class="fas fa-phone-alt"></i>
           </div>
@@ -744,20 +744,18 @@
             <a href="tel:+27716876941" title="Contact Shakex"><i class="fas fa-phone-alt"></i> ..whatsapp me</a>
           </div>
         </article>
-
-        <article title="location" data-scroll class="contact-item">
+        <!-- WHATSAPP NUMBER -->
+        <article title="WhatsApp Number" data-scroll class="contact-item">
           <div class="icon">
-            <i class="fas fa-map-marked-alt"></i>
+            <i class="fa-brands fa-whatsapp"></i>
           </div>
-          <h2>Address</h2>
-          <div class="contact-info">
-            <p>Mahikeng, North West.<span>South Africa</span></p>
-            <a href="https://goo.gl/maps/8XfqHABUeWN6oEjB6" title="view in google maps" target="_blank"><i
-                class="fas fa-map-pin"></i>..where?</a>
+          <h2>WhatsApp</h2>
+          <div id="whatsapp" class="contact-info">
+            <p>+27716876941</p>
+            <a href="tel:+27716876941" title="Contact Shakex"><i class="fas fa-phone-alt"></i> ..whatsapp me</a>
           </div>
         </article>
 
- 
       </div>
     </div>
     <!-- padding section -->
