--- a/index.html
+++ b/index.html
@@ -50,20 +50,20 @@
 
 <body>
   <!-- LOADER -->
-  <!-- <div class="loader_bg">
+  <div class="loader_bg">
     <div class="spinner">
       loading
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div> -->
-  <!--Header-->
+  </div>
+  <!-- HEADER -->
   <header id="header">
     <div class="header">
       <nav id="navbar">
         <div class="brand">
-          <a href="#home" title="Shakex Sempe navbar logo" class="scroll-link">
+          <a href="#home" title="Shakex Sempe" class="scroll-link">
             <h1>shakex<span>Sempe</span></h1>
           </a>
         </div>
@@ -123,13 +123,13 @@
         </div>
       </nav>
     </div>
-    <!--Progress-bar-->
+    <!-- PROGRESS BAR-->
     <div class="progress-container">
       <div class="progress-bar" id="myBar"></div>
     </div>
-    <!--end of Progress-bar-->
+    <!-- END OF PROGRESS BAR-->
   </header>
-  <!--End of Header-->
+  <!-- END OF HERO-->
 
   <!--HERO-->
   <section id="home" class="section welcome-section">
