--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
             </p>
             <p class="about-body io-item" id="about-body">
               <i class="fa-brands fa-js"></i>
-              I use <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">Javascript</a> to script dynamic& interactive User Interface.  
+              To create dynamic & interactive User Interface I script <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">Javascript</a> algorithms and basic APIs.
             </p>
             <p class="about-body io-item">
               <i class="fa-brands fa-react"></i>
@@ -752,7 +752,7 @@
           <h2>WhatsApp</h2>
           <div id="whatsapp" class="contact-info">
             <p>+27716876941</p>
-            <a href="tel:+27716876941" title="Contact Shakex"><i class="fas fa-phone-alt"></i> ..whatsapp me</a>
+            <a href="tel:+27716876941" title="Contact Shakex"><i class="fa-solid fa-mobile-screen-button"></i> ..whatsapp me</a>
           </div>
         </article>
 
