--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       loading
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header">
     <div class="header">
@@ -161,7 +161,7 @@
         </a>
       </div>
       <div class="slogan">
-        <p>web developer : </p>
+        <p>Front-end web developer : </p>
         <p>responsive, Immersive & Engaging</p>
         <p><a href="#cube">websites & Landing pages</a></p>
       </div>
@@ -872,6 +872,21 @@
   </section>
   <!-- END OF FOOTER-->
 </main>
+<!-- BOTTOM NAVIGATION -->
+<div class="bottom-nav" id="bottom-nav">
+  <figure class="link-item item-1">
+    <i class="fas fa-user"></i>
+    <figcaption><a href="#about">about</a></figcaption>
+  </figure>
+  <figure class="link-item item-2">
+    <i class="fas fa-house"></i>
+    <figcaption><a href="#home">home</a></figcaption>
+  </figure>
+  <figure class="link-item item-3">
+    <i class="fa-regular fa-code"></i>
+    <figcaption><a href="#work">work</a></figcaption>
+  </figure>
+</div>
 <!-- PRELOADER SCRIPT -->
 <script>
   setTimeout(function () {
