bottom nav links

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       loading
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header">
     <div class="header">
@@ -875,16 +875,13 @@
 <!-- BOTTOM NAVIGATION -->
 <div class="bottom-nav" id="bottom-nav">
   <figure class="link-item item-1">
-    <i class="fas fa-user"></i>
-    <figcaption><a href="#about">about</a></figcaption>
+    <a href="#about"><i class="fas fa-user"></i>about</a>
   </figure>
   <figure class="link-item item-2">
-    <i class="fas fa-house"></i>
-    <figcaption><a href="#home">home</a></figcaption>
+    <a href="#home"><i class="fas fa-house"></i>home</a>
   </figure>
   <figure class="link-item item-3">
-    <i class="fa-regular fa-code"></i>
-    <figcaption><a href="#work">work</a></figcaption>
+    <a href="#work"><i class="fa-regular fa-code"></i>work</a>
   </figure>
 </div>
 <!-- PRELOADER SCRIPT -->
