--- a/index.html
+++ b/index.html
@@ -175,16 +175,16 @@
         <div class="floor"></div>
         <div class="cube io-item">
             <div class="front">
-              <a href="#skills">1. skills</a>
+              <a href="#skills">Immersive</a>
             </div>
             <div class="right">
-              <a href="#work">2. work</a>
+              <a href="#skills">Engaging</a>
             </div>
             <div class="back">
-              <a href="#projects">3. portfolio</a>
+              <a href="#skills">Responsive</a>
             </div>
             <div class="left">
-              <a href="#about">4. about</a>
+              <a href="#skills">Accessible</a>
             </div>
             
             <div class="top">
