--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   </div>
   <!-- HEADER -->
   <header id="header">
+      <a class="skip-link" href="#main">skip to main content</a>
     <div class="header">
       <nav id="navbar">
         <div class="brand">
