--- a/index.html
+++ b/index.html
@@ -876,13 +876,13 @@
 <!-- BOTTOM NAVIGATION -->
 <div class="bottom-nav" id="bottom-nav">
   <figure class="link-item item-1">
-    <a href="#about"><i class="fas fa-user"></i></a>
+    <a href="#about"><i class="fas fa-user"></i>about</a>
   </figure>
   <figure class="link-item item-2">
-    <a href="#home"><i class="fas fa-house"></i></a>
+    <a href="#home"><i class="fas fa-house"></i>home</a>
   </figure>
   <figure class="link-item item-3">
-    <a href="#work"><i class="fa-regular fa-code"></i></a>
+    <a href="#work"><i class="fa-regular fa-code"></i>work</a>
   </figure>
 </div>
 <!-- PRELOADER SCRIPT -->
